--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -940,14 +940,17 @@
 	{
 		@SUBTYPE:HAS[#name[3RVAC]]
 		{
+			-CoMOffset = 0.0, -2.345, 0.0
 			-CoMOffset = 0.0, -0.673, 0.0
 		}
 		@SUBTYPE:HAS[#name[6RVAC]]
 		{
+			-CoMOffset = 0.0, 3.032, 0.0
 			-CoMOffset = 0.0, 4.746, 0.0
 		}
 		@SUBTYPE:HAS[#name[6Sofie]]
 		{
+			-CoMOffset = 0.0, 3.032, 0.0
 			-CoMOffset = 0.0, 4.746, 0.0
 		}
 	}
@@ -1493,7 +1496,7 @@
 }
 @PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 3.25
+	@mass = 2.5
 	@rescaleFactor = 1
 }
 
@@ -1505,7 +1508,7 @@
 }
 @PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 3
+	@mass = 2
 	@rescaleFactor = 1
 }
 
@@ -1514,12 +1517,12 @@
 @PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
-	CoMOffset = 0.0, -1.5, 0.0
+	%CoMOffset = 0.0, -6, 0.0
 }
 @PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 75
-	CoMOffset = 0.0, -2.4, 0.0
+	@mass = 66
+	%CoMOffset = 0.0, -9.6, 0.0
 	@rescaleFactor = 1
 
 	%maxTemp = 873.15
@@ -1537,12 +1540,10 @@
 @PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
-	CoMOffset = 0.0, -2, 0.0
 }
 @PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 20
-	CoMOffset = 0.0, -3.2, 0.0
+	@mass = 33
 	@rescaleFactor = 1
 
 	%maxTemp = 873.15
@@ -1560,12 +1561,10 @@
 @PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 15
-	CoMOffset = 0.0, -2, 0.0
 }
 @PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 25
-	%CoMOffset = 0.0, -3.2, 0.0
+	@mass = 43
 	@rescaleFactor = 1
 
 	%maxTemp = 873.15
@@ -1583,12 +1582,10 @@
 @PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
-	CoMOffset = 0.0, -2, 0.0
 }
 @PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
-	@mass = 20
-	CoMOffset = 0.0, -3.2, 0.0
+	@mass = 33
 	@rescaleFactor = 1
 
 	%maxTemp = 873.15
