--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -12,7 +12,7 @@
 	@minimum_drag = 0.2
 	@angularDrag = 0.5
 
-	-MODULE[ModuleSEPEngineGUI]:NEEDS[!RealSolarSystem],* {}
+	-MODULE[ModuleSEPEngineGUI]:NEEDS[!RealSolarSystem,!KSRSS],* {}
 	@MODULE[ModuleSEPEngineGUI]:NEEDS[RealSolarSystem],*
 	{
 		@SingleEngineThrust = 2340
@@ -98,17 +98,17 @@
 		}
 	}
 
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]:NEEDS[!RealSolarSystem]
+	@MODULE[ModuleEnginesFX]:HAS[#engineID[AllEngines]]:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		@maxThrust = 10100
 	}
 
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[MiddleInner]]:NEEDS[!RealSolarSystem]
+	@MODULE[ModuleEnginesFX]:HAS[#engineID[MiddleInner]]:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		@maxThrust = 5125
 	}
 
-	@MODULE[ModuleEnginesFX]:HAS[#engineID[CenterThree]]:NEEDS[!RealSolarSystem,TundraExploration]
+	@MODULE[ModuleEnginesFX]:HAS[#engineID[CenterThree]]:NEEDS[!RealSolarSystem,!KSRSS,TundraExploration]
 	{
 		@maxThrust = 2000
 	}
@@ -339,17 +339,29 @@
         diskSpace = 255000
     }
     -RESOURCE,* {}
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = LiquidFuel
         amount = 16000
         maxAmount = 16000
     }
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = Oxidizer
         amount = 57600
         maxAmount = 57600
+    }
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = LiquidFuel
+        amount = 38260
+        maxAmount = 38260
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = Oxidizer
+        amount = 137736
+        maxAmount = 137736
     }
 	RESOURCE:NEEDS[RealSolarSystem]
     {
@@ -406,6 +418,10 @@
 	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem]
 	{
 		@thrusterPower = 75
+	}
+	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		@thrusterPower = 200
 	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
@@ -594,7 +610,7 @@
 		}
 	}
 
-	@MODULE[ModuleEnginesFX]:NEEDS[!RealSolarSystem]
+	@MODULE[ModuleEnginesFX]:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		@maxThrust = 580
 	}
@@ -726,7 +742,7 @@
 		}
 	}
 
-	@MODULE[ModuleEnginesFX]:NEEDS[!RealSolarSystem]
+	@MODULE[ModuleEnginesFX]:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		@maxThrust = 580
 	}
@@ -864,17 +880,29 @@
         diskSpace = 255000
     }
     -RESOURCE,* {}
-	RESOURCE:NEEDS[!RealSolarSystem]
+	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = LiquidFuel
         amount = 3000
         maxAmount = 3000
     }
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = Oxidizer
         amount = 10800
         maxAmount = 10800
+    }
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = LiquidFuel
+        amount = 7825
+        maxAmount = 7825
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = Oxidizer
+        amount = 28170
+        maxAmount = 28170
     }
 	RESOURCE:NEEDS[RealSolarSystem]
     {
@@ -930,6 +958,10 @@
 	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem]
 	{
 		@thrusterPower = 20
+	}
+	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		@thrusterPower = 35
 	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
@@ -1036,6 +1068,10 @@
 	{
 		@thrusterPower = 20
 	}
+	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		@thrusterPower = 35
+	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
 		@thrusterPower = 50
@@ -1100,6 +1136,10 @@
 	{
 		@thrusterPower = 20
 	}
+	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		@thrusterPower = 35
+	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
 		@thrusterPower = 50
@@ -1135,19 +1175,30 @@
 	-MODULE[ModuleFuelTanks],* {}
 
 	-RESOURCE,* {}
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = LiquidFuel
         amount = 375
         maxAmount = 375
     }
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = Oxidizer
         amount = 1350
         maxAmount = 1350
     }
-
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = LiquidFuel
+        amount = 350
+        maxAmount = 350
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = Oxidizer
+        amount = 1260
+        maxAmount = 1260
+    }
 	RESOURCE:NEEDS[RealSolarSystem]
     {
 		name = LiquidFuel
@@ -1188,17 +1239,29 @@
 		amount = 5000
 		maxAmount = 5000
 	}
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = LiquidFuel
         amount = 3250
         maxAmount = 3250
     }
-    RESOURCE:NEEDS[!RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
     {
 		name = Oxidizer
         amount = 11700
         maxAmount = 11700
+    }
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = LiquidFuel
+        amount = 5435
+        maxAmount = 5435
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    {
+		name = Oxidizer
+        amount = 19566
+        maxAmount = 19566
     }
     RESOURCE:NEEDS[RealSolarSystem]
     {
@@ -1254,6 +1317,10 @@
 	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem]
 	{
 		@thrusterPower = 20
+	}
+	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		@thrusterPower = 35
 	}
 	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
 	{
@@ -1398,7 +1465,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 45
 }
@@ -1410,7 +1477,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 45
 	@CoMOffset = 0, 0, 0
@@ -1428,7 +1495,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
@@ -1466,7 +1533,7 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
@@ -1478,7 +1545,7 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 0.75
 }
@@ -1490,7 +1557,7 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1.25
 }
@@ -1502,7 +1569,7 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
@@ -1514,7 +1581,7 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 20
 	%CoMOffset = 0.0, -6, 0.0
@@ -1537,7 +1604,7 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 }
@@ -1558,7 +1625,7 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 15
 }
@@ -1579,7 +1646,7 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 10
 }
@@ -1600,7 +1667,7 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:AFTER[StarshipExpansionProject]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:AFTER[StarshipExpansionProject]
 {
 	@mass = 1
 }
