--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1586,6 +1586,10 @@
 	@mass = 20
 	%CoMOffset = 0.0, -6, 0.0
 }
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,KSRSS]:AFTER[StarshipExpansionProject]
+{
+	%CoMOffset = 0.0, -6, 0.0
+}
 @PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
 	@mass = 66
