--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1395,7 +1395,7 @@
 
 @PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipLaunchExpansion]
 {
-	@mass *= 4
+	//@mass *= 2
 	%rescaleFactor = 1.6
 	@MODULE[ModuleSLEAnimate]:HAS[~AnimationName[MechazillaRight],~AnimationName[MechazillaLeft]],*
 	{
