--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -1173,6 +1173,10 @@
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
 	-MODULE[ModuleFuelTanks],* {}
+	MODULE:NEEDS[CryoTanks]
+	{
+		name = InterstellarFuelSwitch
+	}
 
 	-RESOURCE,* {}
     RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
@@ -1689,6 +1693,11 @@
 	%emissiveConstant = 0.85
 	%thermalMassModifier = 1.0
 }
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,CryoTanks]:AFTER[CryoTanks]
+{
+	-MODULE[InterstellarFuelSwitch],* {}
+}
+
 
 @INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:AFTER[StarshipExpansionProject]
 {
