--- a/GameData/SEP_kOS_Guidance.cfg
+++ b/GameData/SEP_kOS_Guidance.cfg
@@ -931,6 +931,10 @@
 			ratio = 3.6
 		}
 	}
+	@MODULE[ModuleEnginesFX]:NEEDS[kOS,RealSolarSystem]
+	{
+		@maxThrust = 5
+	}
 
 	@MODULE[ModuleRCSFX]
 	{
@@ -1040,6 +1044,10 @@
 			ratio = 3.6
 		}
 	}
+	@MODULE[ModuleEnginesFX]:NEEDS[kOS,RealSolarSystem]
+	{
+		@maxThrust = 5
+	}
 
 	@MODULE[ModuleRCSFX]
 	{
@@ -1107,6 +1115,10 @@
 			name = Oxidizer
 			ratio = 3.6
 		}
+	}
+	@MODULE[ModuleEnginesFX]:NEEDS[kOS,RealSolarSystem]
+	{
+		@maxThrust = 5
 	}
 
 	@MODULE[ModuleRCSFX]
@@ -1293,6 +1305,10 @@
 			name = Oxidizer
 			ratio = 3.6
 		}
+	}
+	@MODULE[ModuleEnginesFX]:NEEDS[kOS,RealSolarSystem]
+	{
+		@maxThrust = 5
 	}
 
 	@MODULE[ModuleRCSFX]
