--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
@@ -455,7 +455,7 @@ PART
 		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = MiddleThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
@@ -463,7 +463,7 @@ PART
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = MiddleThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
@@ -496,7 +496,7 @@ PART
 		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = CenterThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
@@ -504,7 +504,7 @@ PART
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = CenterThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
