--- a/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
@@ -351,7 +351,7 @@ PART
 		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
@@ -359,7 +359,7 @@ PART
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapThree
+			templateName = CryoRapFour
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
