--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -157,6 +157,34 @@
 		}
 	}
 
+	MODULE:NEEDS[!RealSolarSystem,KSRSS]
+	{
+		name = ModuleRCSFX
+		thrusterTransformName = RCS
+		thrusterPower = 200
+		resourceName = LiquidFuel
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		PROPELLANT
+		{
+			name = LiquidFuel
+			ratio = 1
+			DrawGauge = True
+			resourceFlowMode = STAGE_PRIORITY_FLOW
+		}
+		PROPELLANT
+		{
+			name = Oxidizer
+			ratio = 3.6
+			resourceFlowMode = STAGE_PRIORITY_FLOW
+		}
+		atmosphereCurve
+		{
+			key = 0 500
+			key = 1 500
+			key = 5 0.001
+		}
+	}
+
 	MODULE:NEEDS[RealSolarSystem]
 	{
 		name = ModuleRCSFX
