--- a/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
+++ b/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
@@ -2,30 +2,21 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
 	-MODULE[ModuleFuelTanks],* {}
-
-	@MODULE[ModuleRCSFX]:NEEDS[!RealSolarSystem,KSRSS]
-	{
-		@thrusterPower = 200
-	}
-	@MODULE[ModuleRCSFX]:NEEDS[RealSolarSystem]
-	{
-		@thrusterPower = 400
-	}
 }
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleSEPPartSwitchAction],* {}
 }
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
@@ -33,7 +24,7 @@
 }
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
@@ -46,7 +37,7 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
@@ -59,7 +50,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	%rescaleFactor = 1.6
 	@MODULE[ModuleSLEAnimate]:HAS[~AnimationName[MechazillaRight],~AnimationName[MechazillaLeft]],*
@@ -124,11 +115,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 45
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 9.2
 	@rescaleFactor = 1
@@ -136,11 +127,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 45
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 120
 	@rescaleFactor = 1
@@ -148,7 +139,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 	@MODULE[ModuleControlSurface],*
@@ -156,7 +147,7 @@
 		@ctrlSurfaceArea = 2
 	}
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -164,11 +155,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 6
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -176,11 +167,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -188,11 +179,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -200,11 +191,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2.5
 	@rescaleFactor = 1
@@ -212,11 +203,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -224,11 +215,11 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 20
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 66
 	%CoMOffset = 0.0, -9.6, 0.0
@@ -246,11 +237,11 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 10
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 33
 	@rescaleFactor = 1
@@ -267,11 +258,11 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 15
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 43
 	@rescaleFactor = 1
@@ -288,11 +279,11 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 10
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 33
 	@rescaleFactor = 1
@@ -309,11 +300,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -356,7 +347,7 @@
 
 
 
-@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,!TweakableEverything,RealSolarSystem]:FOR[StarshipInterface]
+@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@rescaleFactor = 1
 	@scale = 1.6,1.6,1.6
