--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -405,21 +405,13 @@
 			linkedTo = thrust
 			engineID = Vents
 		}
-		TEMPLATE:NEEDS[!RealSolarSystem]
+		TEMPLATE
 		{
 			templateName = sep-vent-jet
 			overrideParentTransform = VentTransform
 			position = 0,0.0005,0
 			rotation = 0, 0, 180
 			scale = 2.1, 6.5, 2.1
-		}
-		TEMPLATE:NEEDS[RealSolarSystem]
-		{
-			templateName = sep-vent-jet
-			overrideParentTransform = VentTransform
-			position = 0,0.0005,0
-			rotation = 0, 0, 180
-			scale = 1.6, 1.6, 1.6
 		}
 	}
 
