--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_CREW_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_CREW_KOS.cfg
@@ -199,7 +199,7 @@ PART
 		}
 	}
 	
-	MODULE:NEEDS[!RealSolarSystem]
+	MODULE:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		name = ModuleRCSFX
 		thrusterTransformName = RCS
