--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
@@ -104,7 +104,7 @@ PART
 		}
 	}
 	
-	MODULE:NEEDS[!RealSolarSystem]
+	MODULE:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		name = ModuleRCSFX
 		thrusterTransformName = RCS
