--- a/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
+++ b/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
@@ -2,21 +2,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
-{
-	-MODULE[ModuleCryoTank],* {}
-	-MODULE[ModuleTankManager],* {}
-	-MODULE[ModuleFuelTanks],* {}
-}
-
-
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
-{
-	-MODULE[ModuleSEPPartSwitchAction],* {}
-}
-
-
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS,SEP_22_SHIP_BODY_KOS,SEP_22_SHIP_TANKER_KOS,SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
@@ -26,22 +12,10 @@
 
 @PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
 {
-	-MODULE[ModuleCryoTank],* {}
-	-MODULE[ModuleTankManager],* {}
-	-MODULE[ModuleFuelTanks],* {}
 	MODULE:NEEDS[CryoTanks]
 	{
 		name = InterstellarFuelSwitch
 	}
-}
-
-
-
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
-{
-	-MODULE[ModuleCryoTank],* {}
-	-MODULE[ModuleTankManager],* {}
-	-MODULE[ModuleFuelTanks],* {}
 }
 
 
@@ -321,6 +295,42 @@
 @PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,CryoTanks]:AFTER[CryoTanks]
 {
 	-MODULE[InterstellarFuelSwitch],* {}
+}
+
+
+
+@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+{
+	@mass = 17.5
+}
+@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+{
+	@mass = 55
+	@rescaleFactor = 1
+}
+
+
+
+@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+{
+	@mass = 7.5
+}
+@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+{
+	@mass = 25
+	@rescaleFactor = 1
+}
+
+
+
+@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+{
+	@mass = 35
+}
+@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+{
+	@mass = 90
+	@rescaleFactor = 1
 }
 
 
