--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_CARGO_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_CARGO_KOS.cfg
@@ -130,7 +130,7 @@ PART
 		}
 	}
 	
-	MODULE:NEEDS[!RealSolarSystem]
+	MODULE:NEEDS[!RealSolarSystem,!KSRSS]
 	{
 		name = ModuleRCSFX
 		thrusterTransformName = RCS
