--- a/GameData/StarshipInterface/Categories/Categories.cfg
+++ b/GameData/StarshipInterface/Categories/Categories.cfg
@@ -26,6 +26,9 @@ CUSTOM_PARTLIST_CATEGORY
 			part = SEP.22.SHIP.FWD.LEFT.KOS
 			part = SEP.22.SHIP.AFT.RIGHT.KOS
 			part = SEP.22.SHIP.AFT.LEFT.KOS
+			part = SEP.23.SHIP.BODY.EXP.KOS
+			part = SEP.23.SHIP.NOSE.EXP.KOS
+			part = SEP.23.SHIP.DEPOT.KOS
 			part = SEP.22.RAPTOR2.SL.KOS
 			part = SEP.22.RAPTOR.VAC.KOS
 			part = SLE.SS.OLIT.Base.KOS
