--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
@@ -56,6 +56,15 @@ PART
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 
+	MODULE
+	{
+		name = ModuleDockingNode
+		referenceAttachNode = node_bottom
+		nodeTransformName = node_bottom
+		nodeType = BTB
+		stagingToggleEnabledEditor = false
+	}
+
     MODULE:NEEDS[TundraExploration]
 	{
        name = ModuleTundraEngineSwitch
@@ -309,6 +318,13 @@ PART
 			primaryColor = #696969
 			secondaryColor = #006923
 			defaultSubtypePriority = 1
+
+			TEXTURE
+      	    {
+				texture = StarshipExpansionProject/Assets/MK1/SEP_Raptor2_SL_GREEN
+				currentTexture = SEP_Raptor2_SL_GRAY
+				transform = Nozzle
+        	}
 		}
 		SUBTYPE
 		{
@@ -415,25 +431,21 @@ PART
 			linkedTo = throttle
 			engineID = AllEngines
 		}
-		CONTROLLER
-		{
-			name = random
-			linkedTo = random
-			range = -1,1
-		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = SuperheavyPlumeOne
+			templateName = sh_plume_j //SuperheavyPlumeOne
+			overrideParentTransform = AllThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 0.7,0.7,0.7
+			scale = 1,1,6
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = SuperheavyPlumeOne
+			templateName = sh_plume_j //SuperheavyPlumeOne
+			overrideParentTransform = AllThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 1,1,2
+			scale = 1.6,1.6,9.6
 		}
 	}
 
@@ -454,27 +466,21 @@ PART
 			linkedTo = throttle
 			engineID = MiddleInner
 		}
-		CONTROLLER
-		{
-			name = random
-			linkedTo = random
-			range = -1,1
-		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = sh_plume_j //CryoRapFour
 			overrideParentTransform = MiddleThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
-			scale = 0.7,0.7,0.7
+			scale = 1,1,4
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = sh_plume_j //CryoRapFour
 			overrideParentTransform = MiddleThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
-			scale = 1,1,2
+			scale = 1.6,1.6,6.4
 		}
 	}
 
@@ -495,27 +501,21 @@ PART
 			linkedTo = throttle
 			engineID = CenterThree
 		}
-		CONTROLLER
-		{
-			name = random
-			linkedTo = random
-			range = -1,1
-		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = rap_plume_j //CryoRapFour
 			overrideParentTransform = CenterThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
-			scale = 0.7,0.7,0.7
+			scale = 1,1,1
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = rap_plume_j //CryoRapFour
 			overrideParentTransform = CenterThrustTransform
 			position = 0, 0, 0
 			rotation = 0, 0, 0
-			scale = 1,1,2
+			scale = 1.6,1.6,1.6
 		}
 	}
 
