--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -372,7 +372,7 @@
 
 		TEMPLATE
 		{
-			templateName = SEP-SP-RCS
+			templateName = rcs_plume_j
 			overrideParentTransform = RCS
 			position = 0,0,0
 			rotation = 0, 0, 180
@@ -405,13 +405,17 @@
 			linkedTo = thrust
 			engineID = Vents
 		}
+		ATMOSPHEREDENSITYCONTROLLER
+		{
+			name = atmo
+		}
 		TEMPLATE
 		{
-			templateName = sep-vent-jet
+			templateName = vent_plume_j
 			overrideParentTransform = VentTransform
 			position = 0,0.0005,0
 			rotation = 0, 0, 180
-			scale = 2.1, 6.5, 2.1
+			scale = 1,1,1
 		}
 	}
 
