--- a/GameData/StarshipInterface/Parts/SEP_22_RAPTOR_VAC_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_RAPTOR_VAC_KOS.cfg
@@ -262,19 +262,19 @@ PART
 		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapVac
+			templateName = rap_plume_j //CryoRapVac
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 1.2,1.2,1.2
+			scale = 1.85,1.85,1
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapVac
+			templateName = rap_plume_j //CryoRapVac
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 2,2,2
+			scale = 2.96,2.96,1.6
 		}
     }
 }
