--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_BODY_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_BODY_KOS.cfg
@@ -821,7 +821,7 @@ PART
 
 		TEMPLATE
 		{
-			templateName = SEP-SP-RCS
+			templateName = rcs_plume_j
 			overrideParentTransform = RCS
 			position = 0,0,0
 			rotation = 0, 0, 180
@@ -840,14 +840,17 @@ PART
 			linkedTo = thrust
 			engineID = Vents
 		}
-
+		ATMOSPHEREDENSITYCONTROLLER
+		{
+			name = atmo
+		}
 		TEMPLATE
 		{
-			templateName = sep-vent-jet
+			templateName = vent_plume_j
 			overrideParentTransform = VentTransform
 			position = 0,0.0005,0
 			rotation = 0, 0, 180
-			scale = 2.1, 6.5, 2.1
+			scale = 1,1,1
 		}
 	}
 
