--- a/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
@@ -236,7 +236,7 @@ PART
 		gimbalRangeYP = 0
 		gimbalRangeYN = 0
 		useGimbalResponseSpeed = true
-		gimbalResponseSpeed = 16
+		gimbalResponseSpeed = 30
 	}
 
 	MODULE
@@ -351,19 +351,19 @@ PART
 		}
 		TEMPLATE:NEEDS[!RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = rap_plume_j //CryoRapFour
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 0.7,0.7,0.7
+			scale = 1,1,1
 		}
 		TEMPLATE:NEEDS[RealSolarSystem]
 		{
-			templateName = CryoRapFour
+			templateName = rap_plume_j //CryoRapFour
 			overrideParentTransform = ThrustTransform
 			position = 0,0,0
 			rotation = 0, 0, 0
-			scale = 1.1,1.1,1.3
+			scale = 1.6,1.6,1.6
 		}
     }
 }
