--- a/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
@@ -245,7 +245,7 @@ PART
 
 		TEMPLATE
 		{
-			templateName = SEP-SP-RCS
+			templateName = rcs_plume_j
 			overrideParentTransform = RCS
 			position = 0,0,0
 			rotation = 0, 0, 180
