--- a/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
+++ b/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
@@ -2,7 +2,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS,SEP_22_SHIP_BODY_KOS,SEP_22_SHIP_TANKER_KOS,SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS,SEP_22_SHIP_BODY_KOS,SEP_22_SHIP_TANKER_KOS,SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
 {
 	-MODULE[ModuleCryoTank],* {}
 	-MODULE[ModuleTankManager],* {}
@@ -10,9 +10,9 @@
 }
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
 {
-	MODULE:NEEDS[CryoTanks]
+	MODULE:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,CryoTanks]
 	{
 		name = InterstellarFuelSwitch
 	}
@@ -24,7 +24,7 @@
 
 
 
-@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SLE_SS_OLIT_Base_KOS,SLE_SS_OLIT_MZ_KOS,SLE_SS_OLIT_Top_KOS,SLE_SS_OLIT_Core_KOS,SLE_SS_OLM_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	%rescaleFactor = 1.6
 	@MODULE[ModuleSLEAnimate]:HAS[~AnimationName[MechazillaRight],~AnimationName[MechazillaLeft]],*
@@ -89,11 +89,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 45
 }
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 9.2
 	@rescaleFactor = 1
@@ -101,11 +101,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 45
 }
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 120
 	@rescaleFactor = 1
@@ -113,7 +113,7 @@
 
 
 
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 	@MODULE[ModuleControlSurface],*
@@ -121,7 +121,7 @@
 		@ctrlSurfaceArea = 2
 	}
 }
-@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_GRIDFIN_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 3
 	@rescaleFactor = 1
@@ -129,11 +129,11 @@
 
 
 
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,!RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 6
 }
-@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_INTER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 8
 	@rescaleFactor = 1
@@ -141,11 +141,11 @@
 
 
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -153,11 +153,11 @@
 
 
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 0.75
 }
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 1.5
 	@rescaleFactor = 1
@@ -165,11 +165,11 @@
 
 
 
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1.25
 }
-@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_AFT_LEFT_KOS,SEP_22_SHIP_AFT_RIGHT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2.5
 	@rescaleFactor = 1
@@ -177,11 +177,11 @@
 
 
 
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_FWD_LEFT_KOS,SEP_22_SHIP_FWD_RIGHT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -189,11 +189,11 @@
 
 
 
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 20
 }
-@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_BODY_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 66
 	%CoMOffset = 0.0, -9.6, 0.0
@@ -211,11 +211,11 @@
 
 
 
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 10
 }
-@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CARGO_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 33
 	@rescaleFactor = 1
@@ -232,11 +232,11 @@
 
 
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 15
 }
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 43
 	@rescaleFactor = 1
@@ -253,11 +253,11 @@
 
 
 
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 10
 }
-@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_TANKER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 33
 	@rescaleFactor = 1
@@ -274,11 +274,11 @@
 
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 1
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 2
 	@rescaleFactor = 1
@@ -292,18 +292,18 @@
 	%emissiveConstant = 0.85
 	%thermalMassModifier = 1.0
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[kOS,CryoTanks]:AFTER[CryoTanks]
+@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,CryoTanks]:AFTER[CryoTanks]
 {
 	-MODULE[InterstellarFuelSwitch],* {}
 }
 
 
 
-@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 17.5
 }
-@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_BODY_EXP_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 55
 	@rescaleFactor = 1
@@ -311,11 +311,11 @@
 
 
 
-@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 7.5
 }
-@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_NOSE_EXP_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 25
 	@rescaleFactor = 1
@@ -323,11 +323,11 @@
 
 
 
-@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,!RealSolarSystem,!KSRSS]:FOR[StarshipInterface]
 {
 	@mass = 35
 }
-@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@PART[SEP_23_SHIP_DEPOT_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@mass = 90
 	@rescaleFactor = 1
@@ -339,7 +339,7 @@
 
 
 
-@FARAeroStress:NEEDS[FerramAerospaceResearch]:FOR[StarshipInterface]
+@FARAeroStress:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,FerramAerospaceResearch]:FOR[StarshipInterface]
 {
 	@FARPartStressTemplate[structural]
 	{
@@ -357,7 +357,7 @@
 
 
 
-@INTERNAL[SEP_CREW_IVA_*]:NEEDS[kOS,RealSolarSystem]:FOR[StarshipInterface]
+@INTERNAL[SEP_CREW_IVA_*]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,RealSolarSystem]:FOR[StarshipInterface]
 {
 	@rescaleFactor = 1
 	@scale = 1.6,1.6,1.6
@@ -369,7 +369,7 @@
 	}
 }
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[B9PartSwitch,FreeIVA,Reviva,NearFutureProps,!JSI|!ASET/ASET_Props]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,B9PartSwitch,FreeIVA,Reviva,NearFutureProps,!JSI|!ASET/ASET_Props]:FOR[StarshipInterface]
 {
 	@INTERNAL
 	{
@@ -460,7 +460,7 @@
     }
 }
 
-@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[B9PartSwitch,FreeIVA,Reviva,NearFutureProps,JSI,ASET/ASET_Props]:FOR[StarshipInterface]
+@PART[SEP_22_SHIP_CREW_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,B9PartSwitch,FreeIVA,Reviva,NearFutureProps,JSI,ASET/ASET_Props]:FOR[StarshipInterface]
 {
 	@INTERNAL
 	{
